Category headers and totals on the Actor sheet are no longer draggable.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -281,7 +281,7 @@
 					</tr>
 					{{#each actor.system.traitCategories as |category cat|}}
 						{{#unless (eq category "")}}
-						<tr class="item item-header trait-category-header">
+						<tr class="item-header trait-category-header">
 							<td colspan="6">
 								<a class="accordion" id="t-accordion-clickable-{{category}}">{{category}}</a>
 							</td>
@@ -340,7 +340,7 @@
 					</tr>
 					{{#each actor.system.rollableCategories as |category cat|}}
 						{{#unless (eq category "")}}
-						<tr class="item item-header trait-category-header">
+						<tr class="item-header trait-category-header">
 							<td colspan="6">
 								<a class="accordion" id="r-accordion-clickable-{{category}}">{{category}}</a>
 							</td>
@@ -646,7 +646,7 @@
 					</tr>
 					{{#each actor.system.equipmentCategories as |category cat|}}
 						{{#unless (eq category "")}}
-						<tr class="item item-header trait-category-header">
+						<tr class="item-header trait-category-header">
 							<td colspan="10">
 								<a class="accordion" id="e-accordion-clickable-{{category}}">{{category}}</a>
 							</td>
@@ -677,7 +677,7 @@
 							{{/if}}
 						{{/each}}
 					{{/each}}
-					<tr class="item item-money">
+					<tr class="item-money">
 						<td class="item-image"></td>
 						<td class="item-name"><span></span></td>
 						<td class="item-notes"><span></span></td>
@@ -693,7 +693,7 @@
 						<td><span></span></td>
 						<td class="item-controls"></td>
 					</tr>
-					<tr class="item">
+					<tr class="">
 						<td class="item-image"></td>
 						<td class="item-name"><span></span></td>
 						<td class="item-notes"><span></span></td>
