--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -122,8 +122,28 @@
                     <td><input type="text" name="system.college" value="{{item.system.college}}" placeholder="This costs ten times as much for characters in the USA"/></td>
                 </tr>
                 <tr>
+                    <td>Base Cost</td>
+                    <td><input type="text" name="system.spellDetails.cost" value="{{item.system.spellDetails.cost}}" placeholder="The casting cost of the spell"/></td>
+                </tr>
+                <tr>
+                    <td>Base Time to Cast</td>
+                    <td><input type="text" name="system.spellDetails.timeToCast" value="{{item.system.spellDetails.timeToCast}}" placeholder="The time it takes to cast the spell"/></td>
+                </tr>
+                <tr>
+                    <td>Duration</td>
+                    <td><input type="text" name="system.spellDetails.duration" value="{{item.system.spellDetails.duration}}" placeholder="The duration of the spell"/></td>
+                </tr>
+                <tr>
+                    <td>Prerequisites</td>
+                    <td><input type="text" name="system.spellDetails.prerequisites" value="{{item.system.spellDetails.prerequisites}}" placeholder="Prerequisites to learn the spell"/></td>
+                </tr>
+                <tr>
                     <td>Notes</td>
-                    <td><input type="text" name="system.shortNotes" value="{{item.system.shortNotes}}"/></td>
+                    <td><input type="text" name="system.shortNotes" value="{{item.system.shortNotes}}" placeholder="Notes typed here will appear on the actor's spell list"/></td>
+                </tr>
+                <tr>
+                    <td>Page Reference</td>
+                    <td><input type="text" name="system.pageRef" value="{{item.system.pageRef}}"/></td>
                 </tr>
             </table>
         </div>
