--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1754,7 +1754,8 @@ attribute-senses {
 }
 
 .item-points {
-	width: 3.5em;
+	min-width: 3.5em;
+	max-width: 4em;
 }
 
 .item-college {
@@ -1953,4 +1954,10 @@ attribute-senses {
 	border: groove 2px darkgoldenrod;
 	box-shadow: -1px -1px 0 #b5b3a4, 1px -1px 0 #b5b3a4, -1px 1px 0 #b5b3a4, 1px 1px 0 #b5b3a4;
 	margin: 1em 0;
+}
+
+.actor-sheet-digit-col {
+	min-width: 1.5em;
+	text-align: right;
+	padding-right: 0.5em;
 }
