Updated text areas to not be resizeable, and instead occupy the maximum space

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -262,9 +262,9 @@
 					</div>
 				</div>
 
-				<div id="biography">
+				<div id="biography" style="height: 100%">
 					<p>Notes</p>
-					<textarea rows="13" name="system.biography">{{{actor.system.biography}}}</textarea>
+					<textarea style="height: 100%; resize: none" name="system.biography">{{{actor.system.biography}}}</textarea>
 				</div>
 			</div>
 
