--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -77,7 +77,7 @@
         <div class="tab stats" data-tab="notes" data-group="primary">
             <h3 class="bold">Detailed Notes</h3>
             <div class="tab">
-                <textarea rows="8" name="system.notes">{{{system.notes}}}</textarea>
+                <textarea style="height: 100%; resize: none" name="system.notes">{{{system.notes}}}</textarea>
             </div>
         </div>
 
