--- a/templates/item/Custom Jewelry-sheet.html
+++ b/templates/item/Custom Jewelry-sheet.html
@@ -78,7 +78,7 @@
                 </ul>
                 {{/if}}
                 <h3 class="bold">Custom Notes</h3>
-                <textarea rows="8" name="system.notes">{{{item.system.notes}}}</textarea>
+                <textarea style="height: 100%; resize: none" name="system.notes">{{{item.system.notes}}}</textarea>
             </div>
         </div>
 
