--- a/templates/item/Travel Fare-sheet.html
+++ b/templates/item/Travel Fare-sheet.html
@@ -68,7 +68,7 @@
         <div class="tab stats" data-tab="notes" data-group="primary">
             <h3 class="bold">Detailed Notes</h3>
             <div class="tab">
-                <textarea rows="8" name="system.notes">{{{item.system.notes}}}</textarea>
+                <textarea style="height: 100%; resize: none" name="system.notes">{{{item.system.notes}}}</textarea>
             </div>
         </div>
 
