Added a training time tab to the Rollable Sheet.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -99,7 +99,7 @@
 					<table style="margin: unset">
 						<tr>
 							<td class="">Total:</td>
-							<td class="pointTotal">{{numberFormat actor.system.points.total decimals=0}}</td>
+							<td class="pointTotal">{{numberFormat actor.system.points.displayTotal decimals=0}}</td>
 						</tr>
 						<tr>
 							<td class="">Attributes:</td>
