Fixed rollable displaying the correct points value

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -360,7 +360,7 @@
 											{{item.system.shortNotes}}
 										</td>
 										<td class="item-points actor-sheet-digit-col">
-											{{item.system.points}}
+											{{item.system.basePointsPlusTraining}}
 										</td>
 										<td class="item-skill actor-sheet-digit-col" style="width: 4em;">
 											{{item.system.level}}
