--- a/templates/item/Rollable-sheet.html
+++ b/templates/item/Rollable-sheet.html
@@ -246,7 +246,7 @@
                         <td>Effective Hours</td>
                     </tr>
                     <tr class="equipment-entry">
-                        <td>On The Job Hours</td>
+                        <td>On The Job</td>
                         <td><input type="number" name="system.trainingTime.onTheJob" value="{{item.system.trainingTime.onTheJob}}" data-dtype="Number"/></td>
                         <td>{{divide item.system.trainingTime.onTheJob 100 4}}</td>
                     </tr>
