Spells now support training time inputs

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -2973,7 +2973,7 @@
 														   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
 												</td>
 												<td class="item-points actor-sheet-digit-col">
-													{{item.system.points}}
+													{{item.system.basePointsPlusTraining}}
 												</td>
 												<td class="item-controls" style="width: 30px;">
 													<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
