--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -169,6 +169,9 @@
             <a class="item" data-tab="affliction">Affliction</a>
         </div>
         {{/unless}}
+        <div class="header">
+            <a class="item" data-tab="training">Training Time</a>
+        </div>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -179,6 +182,91 @@
             <h3 class="bold">Detailed Notes</h3>
             <div class="tab">
                 <textarea style="height: 100%; resize: none" name="system.notes">{{{item.system.notes}}}</textarea>
+            </div>
+        </div>
+
+        {{!-- Training Time Tab --}}
+        <div class="tab stats" data-tab="training" data-group="primary">
+            <h3 class="bold">Hours of Training</h3>
+            <div class="tab">
+                <table>
+                    <tr class="equipment-entry">
+                        <td>Talent Modifier:</td>
+                        <td>-{{item.system.trainingTime.calculatedModifier}}%</td>
+                    </tr>
+                    <tr class="equipment-entry">
+                        <td>Misc Modifier:</td>
+                        <td><input type="number" name="system.trainingTime.modifier" value="{{item.system.trainingTime.modifier}}" data-dtype="Number"/></td>
+                    </tr>
+                    <tr class="equipment-entry">
+                        <td>Hours Per Point:</td>
+                        <td>{{item.system.trainingTime.neededHours}}</td>
+                    </tr>
+                </table>
+                <table>
+                    <tr class="equipment-header">
+                        <td>Training Type</td>
+                        <td>Hours</td>
+                        <td>Effective Hours</td>
+                    </tr>
+                    <tr class="equipment-entry">
+                        <td>On The Job</td>
+                        <td><input type="number" name="system.trainingTime.onTheJob" value="{{item.system.trainingTime.onTheJob}}" data-dtype="Number"/></td>
+                        <td>{{divide item.system.trainingTime.onTheJob 100 4}}</td>
+                    </tr>
+                    <tr class="equipment-entry">
+                        <td>Self Study</td>
+                        <td><input type="number" name="system.trainingTime.selfStudy" value="{{item.system.trainingTime.selfStudy}}" data-dtype="Number"/></td>
+                        <td>{{divide item.system.trainingTime.selfStudy 100 2}}</td>
+                    </tr>
+                    <tr class="equipment-entry">
+                        <td>Education</td>
+                        <td><input type="number" name="system.trainingTime.education" value="{{item.system.trainingTime.education}}" data-dtype="Number"/></td>
+                        <td>{{divide item.system.trainingTime.education 100 1}}</td>
+                    </tr>
+                    <tr class="equipment-entry">
+                        <td>Intensive Training</td>
+                        <td><input type="number" name="system.trainingTime.intensiveTraining" value="{{item.system.trainingTime.intensiveTraining}}" data-dtype="Number"/></td>
+                        <td>{{divide item.system.trainingTime.intensiveTraining 100 0.5}}</td>
+                    </tr>
+                    <tr class="equipment-header">
+                        <td>Total Hours</td>
+                        <td></td>
+                        <td>{{item.system.trainingTime.effectiveHours}}</td>
+                    </tr>
+                </table>
+                {{#ifCond item.system.trainingTime.totalPoints '>=' 1}}
+                <table>
+                    <tr class="equipment-header" style="font-size: x-large;">
+                        <td>Final Result:</td>
+                        <td>
+                            +{{item.system.trainingTime.totalPoints}} Points
+                        </td>
+                    </tr>
+                </table>
+                {{/ifCond}}
+                {{#ifCond item.system.trainingTime.dabblerPoints '>=' 1}}
+                <table>
+                    <tr class="equipment-header" style="font-size: x-large;">
+                        <td>Final Result:</td>
+                        <td>
+                            +{{item.system.trainingTime.dabblerPoints}} Dabbler Points
+                        </td>
+                    </tr>
+                </table>
+                {{/ifCond}}
+                {{#ifCond item.system.trainingTime.totalPoints '==' 0}}
+                {{#ifCond item.system.trainingTime.dabblerPoints '==' 0}}
+                <table>
+                    <tr class="equipment-header" style="font-size: x-large;">
+                        <td>Final Result:</td>
+                        <td>
+                            0 Points
+                        </td>
+                    </tr>
+                </table>
+                {{/ifCond}}
+                {{/ifCond}}
             </div>
         </div>
 
