Item sheets now include updated tooltips for the new range and staff related flags.

--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -140,6 +140,8 @@
                                     dbk: Double Knockback<br>
                                     dbt: Double Blunt Trauma<br>
                                     nw: No Wounding<br>
+                                    la: Large Area Injury<br>
+                                    area: Large Area Injury<br>
                                 </div>
                             </span>
                         </span>
@@ -171,6 +173,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -242,6 +247,8 @@
                                         dbk: Double Knockback<br>
                                         dbt: Double Blunt Trauma<br>
                                         nw: No Wounding<br>
+                                        la: Large Area Injury<br>
+                                        area: Large Area Injury<br>
                                     </div>
                                 </span>
                             </span>
@@ -282,6 +289,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -424,6 +434,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
