--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -331,6 +331,8 @@
                                     dbk: Double Knockback<br>
                                     dbt: Double Blunt Trauma<br>
                                     nw: No Wounding<br>
+                                    la: Large Area Injury<br>
+                                    area: Large Area Injury<br>
                                 </div>
                             </span>
                         </span>
@@ -362,6 +364,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -433,6 +438,8 @@
                                         dbk: Double Knockback<br>
                                         dbt: Double Blunt Trauma<br>
                                         nw: No Wounding<br>
+                                        la: Large Area Injury<br>
+                                        area: Large Area Injury<br>
                                     </div>
                                 </span>
                             </span>
@@ -473,6 +480,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -615,6 +625,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
