--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -759,6 +759,8 @@
                                     dbk: Double Knockback<br>
                                     dbt: Double Blunt Trauma<br>
                                     nw: No Wounding<br>
+                                    la: Large Area Injury<br>
+                                    area: Large Area Injury<br>
                                 </div>
                             </span>
                         </span>
@@ -790,6 +792,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -861,6 +866,8 @@
                                         dbk: Double Knockback<br>
                                         dbt: Double Blunt Trauma<br>
                                         nw: No Wounding<br>
+                                        la: Large Area Injury<br>
+                                        area: Large Area Injury<br>
                                     </div>
                                 </span>
                             </span>
@@ -901,6 +908,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -1043,6 +1053,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
