--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -190,6 +190,8 @@
                                     dbk: Double Knockback<br>
                                     dbt: Double Blunt Trauma<br>
                                     nw: No Wounding<br>
+                                    la: Large Area Injury<br>
+                                    area: Large Area Injury<br>
                                 </div>
                             </span>
                         </span>
@@ -221,6 +223,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -292,6 +297,8 @@
                                         dbk: Double Knockback<br>
                                         dbt: Double Blunt Trauma<br>
                                         nw: No Wounding<br>
+                                        la: Large Area Injury<br>
+                                        area: Large Area Injury<br>
                                     </div>
                                 </span>
                             </span>
@@ -332,6 +339,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
@@ -474,6 +484,9 @@
                                         kik: Kick<br>
                                         gui: Guided<br>
                                         hom: Homing<br>
+                                        short: Short Range (-1/yard)<br>
+                                        long: Long Range (Long Distance Modifiers)<br>
+                                        staff: The character's staff reduces range penalties<br>
                                         va#: Variable Scope (Replace # with Acc bonus)<br>
                                     </div>
                                 </span>
