Updated tooltip styling

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1706,9 +1706,9 @@ attribute-senses {
 	width: 200px;
 	background-color: #555;
 	color: #fff;
-	text-align: center;
+	text-align: left;
 	border-radius: 6px;
-	padding: 2px 0;
+	padding: 0.5em;
 	position: absolute;
 	z-index: 999;
 	bottom: 125%;
